--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ html {
 .arrowIcon {
   display: block;
   position: relative;
-  top: 480px;
+  top: 85vh;
   left: 50%;
   font-size: xx-large;
   color: rgba(0, 0, 0, 0.3);
